--- a/CSS/main.css
+++ b/CSS/main.css
@@ -41,7 +41,7 @@ header .nav ul{
 .nav_mobile{
     display: none;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     background: #065666;
     position: absolute;
     top: 85px;
@@ -57,6 +57,7 @@ header .nav ul{
     flex-direction: column;
     gap: 60px;
     padding-left: 20px;
+    padding-top: 40px;
 
 }
 
@@ -255,7 +256,7 @@ width: 200px;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 15px 45px;!important
+        padding: 15px 45px !important;
     }
 
     .request{
